<resources>
    <string name="app_name">Recursive League</string>
    <string name="league_list">League List</string>
    <string name="title_activity_league_details">League Details</string>
    <string name="title_league_details">League Details</string>
    <string name="title_last_match">Last Match</string>
    <string name="title_next_match">Next Match</string>
    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Portugeuese Primeira Liga</item>
        <item>Australian A-League</item>
        <item>Scottish Premier League</item>
        <item>English League 1</item>
    </string-array>
    <string name="country">Country</string>
    <string name="first_event">First Event</string>
    <string name="sport">Sport</string>
    <string name="league">League</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="home_score">Home Score</string>
    <string name="away_score">Away Score</string>
    <string name="date_event">Date Event</string>
    <string name="standings">Standings</string>
    <string name="team">Team</string>
</resources>