<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_league_details"
        android:icon="@drawable/ic_league_details_black_24dp"
        android:title="@string/title_league_details" />

    <item
        android:id="@+id/navigation_last_match"
        android:icon="@drawable/ic_last_match_black_24dp"
        android:title="@string/title_last_match" />

    <item
        android:id="@+id/navigation_next_match"
        android:icon="@drawable/ic_next_match_black_24dp"
        android:title="@string/title_next_match" />

    <item
        android:id="@+id/navigation_standings"
        android:icon="@drawable/ic_line_weight_black_24dp"
        android:title="@string/standings" />

    <item
        android:id="@+id/navigation_team"
        android:icon="@drawable/ic_insert_invitation_black_24dp"
        android:title="@string/team" />

</menu>
