<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_league_details">

    <fragment
        android:id="@+id/navigation_league_details"
        android:name="com.erikriosetiawan.recursiveleague.activities.ui.leaguedetails.LeagueDetailsFragment"
        android:label="@string/title_league_details"
        tools:layout="@layout/fragment_league_details" />

    <fragment
        android:id="@+id/navigation_last_match"
        android:name="com.erikriosetiawan.recursiveleague.activities.ui.lastmatch.LastMatchFragment"
        android:label="@string/title_last_match"
        tools:layout="@layout/fragment_last_match" />

    <fragment
        android:id="@+id/navigation_next_match"
        android:name="com.erikriosetiawan.recursiveleague.activities.ui.nextmatch.NextMatchFragment"
        android:label="@string/title_next_match"
        tools:layout="@layout/fragment_next_match" />
</navigation>